# foxhole_stockpile_scanner

./: .gitignore  .gitmodules  FIR_tests_on_other_images.md  HowItworks.md  LICENSE  README.md  config.py  main.py  params.toml  pyproject.toml  requirements.txt
source/: Logger.py  config.py  core.py  enums.py  http_receiver.py  image_processor.py  mouse_manager.py  screenshot_parser.py
source/helpers/: printout_helper.py
source/locations_files/: 1920_1080_100.toml  1920_1080_100_nevish.toml
source/position_files/: 1920_1080_100.toml
source/typed_dicts/: process_dict.py
