[project]
name = "stockpile-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "mss>=10.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "selenium>=4.34.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "types-toml>=0.10.8.20240310",
    "types-selenium>=3.141.9",
    "pip>=26.0.1",
]
